<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category">
        <com.read.scriptures.widget.colorpicker.ColorPickerPreference
            android:defaultValue="@color/black"
            android:key="color1"
            android:summary="@string/color1_summary"
            android:title="@string/color1_title" />
        <com.read.scriptures.widget.colorpicker.ColorPickerPreference
            android:defaultValue="@color/green"
            android:key="color2"
            android:persistent="false"
            android:summary="@string/color2_summary"
            android:title="@string/color2_title" />
        <com.read.scriptures.widget.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@color/green"
            android:key="color3"
            android:summary="@string/color3_summary"
            android:title="@string/color3_title" />
        <com.read.scriptures.widget.colorpicker.ColorPickerPreference
            android:defaultValue="0xff0000ff"
            android:key="color4"
            android:persistent="false"
            android:summary="@string/color4_summary"
            android:title="@string/color4_title" />
    </PreferenceCategory>
</PreferenceScreen>
