<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_clock_setting"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="46.0dip"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tts_clock_label"
            android:textColor="@color/voice_text_normal"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_vertical"
        android:orientation="vertical" />

    <RadioGroup
        android:id="@+id/radioGroupClock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_15"
            style="@style/Widget.CompoundButton.RadioButton.Clock"
            android:layout_width="fill_parent"
            android:layout_height="46.0dip"
            android:text="@string/player_clock_opt_15" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_vertical"
            android:orientation="vertical" />

        <RadioButton
            android:id="@+id/radio_30"
            style="@style/Widget.CompoundButton.RadioButton.Clock"
            android:layout_width="fill_parent"
            android:layout_height="46.0dip"
            android:text="@string/player_clock_opt_30" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_vertical"
            android:orientation="vertical" />

        <RadioButton
            android:id="@+id/radio_60"
            style="@style/Widget.CompoundButton.RadioButton.Clock"
            android:layout_width="fill_parent"
            android:layout_height="46.0dip"
            android:text="@string/player_clock_opt_60" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_vertical"
            android:orientation="vertical" />

        <RadioButton
            android:id="@+id/radio_90"
            style="@style/Widget.CompoundButton.RadioButton.Clock"
            android:layout_width="fill_parent"
            android:layout_height="46.0dip"
            android:text="@string/player_clock_opt_90" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_vertical"
            android:orientation="vertical" />

        <RadioButton
            android:id="@+id/btn_clock_close"
            style="@style/Widget.CompoundButton.RadioButton.Clock"
            android:layout_width="fill_parent"
            android:layout_height="46.0dip"
            android:checked="true"
            android:text="@string/player_clock_opt_close" />
    </RadioGroup>

    <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/divider_vertical"-->
        <!--android:orientation="vertical" />-->

    <!--<TextView-->
        <!--android:id="@+id/btn_clock_close"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="46.0dip"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/player_clock_opt_close"-->
        <!--android:checked="true"-->
        <!--android:textColor="@color/voice_text_selector"-->
        <!--android:textSize="15.0sp" />-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_vertical"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="46.0dip"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_clock_arrow_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_arrow_down_selector" />
    </LinearLayout>
</LinearLayout>