<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23.0dip"
        android:text="@string/tts_local_library_download_label"
        android:textColor="@color/voice_text_normal"
        android:textSize="18.0sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:text="@string/tts_local_library_download_tips"
        android:textColor="@color/voice_text_normal"
        android:textSize="14.0sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:src="@drawable/ic_voice" />

    <TextView
        android:layout_width="192.5dip"
        android:layout_height="40.5dip"
        android:layout_marginBottom="12.0dip"
        android:layout_marginTop="37.5dip"
        android:background="@drawable/btn_voice_selector"
        android:gravity="center"
        android:text="@string/tts_local_library_download_button"
        android:textColor="@color/voice_text_pressed"
        android:textSize="15.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_arrow_down_selector" />
    </LinearLayout>
</LinearLayout>